added classes and styles for index

--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
   </head>
   <body>
     <header class="main-header">
-      <a class="main-header-logo">
+      <a class="logo">
         <img src="img/logo-device.svg" width="163" height="35" alt="Интернет-магазин 'Device'">
       </a>
-      <form class="main-header-search" action="https://echo.htmlacademy.ru" method="GET">
+      <form class="search" action="https://echo.htmlacademy.ru" method="GET" tabindex="0">
         <input type="search" name="search" placeholder="Поиск по сайту">
         <button type="submit">Найти</button>
       </form>
@@ -25,7 +25,7 @@
         <li class="user-nav-cart">
           <a href="">Корзина</a>
         </li>
-      </ul>
+      </ul> 
       <nav class="main-nav">
         <ul class="main-nav-list">
           <li aria-haspopup="true">
@@ -68,17 +68,16 @@
       <!--main slider-->
       <section class="slider">
         <!--#1 slide-->
-        <h2 class="visually-hidden">Слайдер</h2>
         <div class="slide">
           <p class="slide-img">
             <img src="img/slider-1.png" alt="Профессиональная селфи-палка">
           </p>
           <div class="slide-description">
-            <h3>Делай селфи, как Бен Стиллер!</h3>
+            <h3 class="slide-title">Делай селфи, как Бен Стиллер!</h3>
             <p>Самая длинная палка для селфи доступна в нашем магазине.<br>
               Восемь (Восемь, Карл!) метров длиной и весом всего 5 килограмм.
             </p>
-            <a class="btn btn-animated" href="">Подробнее</a>
+            <a class="button" href="">Подробнее</a>
             <table class="slide-table">
               <tr>
                 <td>Длинна палки</td>
@@ -100,11 +99,11 @@
             <img src="img/slider-2.png" alt="Фитнес-браслет">
           </p>
           <div class="slide-description">
-            <h3>Худеем правильно!</h3>
+            <h3 class="slide-title">Худеем правильно!</h3>
             <p>
               Мотивирующие фитнес-браслеты помогут найти в себе силы не пропускать занятия и соблюдать диету.
             </p>
-            <a class="btn btn-animated" href="">Подробнее</a>
+            <a class="button" href="">Подробнее</a>
             <table class="slide-table">
               <tr>
                 <td>Без подзарядки</td>
@@ -122,11 +121,11 @@
             <img src="img/slider-3.png" alt="Квадрокоптер">
           </p>
           <div class="slide-description">
-            <h2>Порхает как бабочка, жалит как пчела!</h2>
+            <h2 class="slide-title">Порхает как бабочка, жалит как пчела!</h2>
             <p>
               Этот обычный, на первый взгляд, квадрокоптер оснащен мощным лазером, замаскированным под стандартную камеру.
             </p>
-            <a class="btn btn-animated" href="">Подробнее</a>
+            <a class="button" href="">Подробнее</a>
             <table class="slide-table">
               <tr>
                 <td>Высота полета</td>
@@ -186,13 +185,13 @@
         <h2 class="visually-hidden">Наши услуги</h2>
         <ul class="services-btn-list">
           <li>
-            <button class="btn btn-animated btn-current">Доставка</button>
+            <button class="button btn-current">Доставка</button>
           </li>
           <li>   
-            <button class="btn btn-animated">Гарантия</button>
+            <button class="button">Гарантия</button>
           </li>
           <li>
-            <button class="btn btn-animated">Кредит</button>
+            <button class="button">Кредит</button>
           </li>
         </ul>
         <div class="service-delivery">
@@ -244,46 +243,46 @@
       </section>
       <section class="about">
         <div class="about-col-left">
-          <h2>О нас</h2>
+          <h2 class="about-title">О нас</h2>
           <p>Огромный выбор гаджетов не оставит равнодушным гика, который есть в каждом из нас.</p>
           <p>Мы можем доставить ваш товар в самые отдаленные точки России! DEVICE работает со многими транспортными
             компаниями:</p>
-          <ul>
+          <ul class="about-list">
             <li>Деловые линии</li>
             <li>Автотрейдинг</li>
             <li>ЖелДорЭкспедиция</li>
           </ul>
-          <a class="btn btn-animated" href="">Подробнее о нас</a>
+          <a class="button" href="">Подробнее о нас</a>
         </div>
         <div class="about-col-right">
-          <h2>Контакты</h2>
+          <h2 class="about-title">Контакты</h2>
           <p>Вы можете забрать товар сами, заехав в наш офис. Заодно, вы сможете проверить работоспособность покупки.
             Всякое бывает.</p>
           <a href="https://goo.gl/maps/t1BHJGnUhaJkedXv9">
             <img src="img/map.jpg" width="560" height="222" alt="г. Москва, ул. Строителей, 15">
           </a>
-          <a class="btn btn-animated" href="">Напишите нам</a>
+          <a class="button" href="">Напишите нам</a>
         </div>
       </section>
     </main>
     <footer class="footer">
-      <a>
+      <a class="logo">
         <svg xmlns="http://www.w3.org/2000/svg" width="163" height="35" viewBox="0 0 163 35" fill="#ffc600">
           <path d="m0.35 0.7v33.6h13.532a15.723 15.723 0 0 0 11.72-4.824 16.464 16.464 0 0 0 4.712-11.976 16.465 16.465 0 0 0-4.712-11.976 15.723 15.723 0 0 0-11.72-4.824zm7.733 26.208v-18.819h5.8a8.648 8.648 0 0 1 6.5 2.568 9.412 9.412 0 0 1 2.489 6.84 9.41 9.41 0 0 1-2.489 6.84 8.646 8.646 0 0 1-6.5 2.568h-5.8zm34.8-5.952h12.082v-7.3h-12.086v-5.567h13.291v-7.389h-21.024v33.6h21.265v-7.392h-13.532v-5.952zm36.343 13.344 11.019-33.6h-8.458l-7.491 24.72-7.491-24.72h-8.457l11.019 33.6zm14.4 0h7.733v-33.6h-7.733zm38.615-1.416a15.514 15.514 0 0 0 6.041-5.688l-6.67-3.84a7.488 7.488 0 0 1-3.165 3.024 9.874 9.874 0 0 1-4.664 1.1 9.594 9.594 0 0 1-7.177-2.736 9.907 9.907 0 0 1-2.682-7.248 9.908 9.908 0 0 1 2.682-7.248 9.594 9.594 0 0 1 7.177-2.736 9.914 9.914 0 0 1 4.64 1.08 7.6 7.6 0 0 1 3.189 3.048l6.67-3.84a15.881 15.881 0 0 0-6.09-5.688 17.419 17.419 0 0 0-8.409-2.088 17.12 17.12 0 0 0-17.592 17.472 17.12 17.12 0 0 0 17.589 17.476 17.519 17.519 0 0 0 8.458-2.088zm17.881-11.928h12.082v-7.3h-12.085v-5.567h13.29v-7.389h-21.022v33.6h21.264v-7.392h-13.532v-5.952z" />
         </svg>
       </a>
-      <ul class="user-nav-list inverted">
+      <ul class="user-nav inverted">
         <li>
-          <a href="">Войти</a>
+          <a class="user-nav-login" href="">Войти</a>
         </li>
         <li>
-          <a href="">Сравнить</a>
+          <a class="user-nav-compare" href="">Сравнить</a>
         </li>
         <li>
-          <a href="">Корзина</a>
+          <a class="user-nav-cart" href="">Корзина</a>
         </li>
       </ul>
-      <p class="footer-address">г. Москва, ул. Строителей, 15</p>
+      <p class="address">г. Москва, ул. Строителей, 15</p>
       <ul class="main-nav-list inverted">
         <li>
           <a href="">Доставка</a>
@@ -295,8 +294,8 @@
           <a href="">Контакты</a>
         </li>
       </ul>
-      <a class="footer-phone" href="tel:+74954959595">Тел.:+7 (495) 495-95-95</a>
-      <ul class="social-btn-list">
+      <a class="phone" href="tel:+74954959595">Тел.:+7 (495) 495-95-95</a>
+      <ul class="social-list">
         <li class="facebook">
           <a href="">Facebook</a>
         </li>
@@ -312,7 +311,7 @@
       </p>
     </footer>
     <div class="map-popup" id="map-popup">
-      <button class="btn-close" aria-label="Закрыть"></button>
+      <button class="button-close" aria-label="Закрыть"></button>
       <img src="img/map-big.jpg" alt="г. Москва, ул. Строителей, 15">
     </div>
     <div class="write-us-modal">
@@ -330,7 +329,7 @@
           <textarea name="message" id="write-us-message" cols="30" rows="10"
             placeholder="В свободной форме"></textarea>
         </p>
-        <button class="btn btn-animated" type="submit">Отправить</button>
+        <button class="button" type="submit">Отправить</button>
       </form>
     </div>
     <!--/modals-->
