--- a/catalog.html
+++ b/catalog.html
@@ -7,30 +7,30 @@
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
-    <header>
-      <a href="index.html" aria-label="Переход на главную">
-        <img src="img/logo-device.svg" width="163" height="35" alt="Логотип интернет-магазина 'Device'">
+    <header class="main-header">
+      <a class="logo" href="index.html" aria-label="Переход на главную">
+        <img src="img/logo-device.svg" width="163" height="35" alt="Интернет-магазин 'Device'">
       </a>
-      <form action="https://echo.htmlacademy.ru" method="GET">
+      <form class="search" action="https://echo.htmlacademy.ru" method="GET" tabindex="0">
         <input type="search" name="search" placeholder="Поиск по сайту">
         <button type="submit">Найти</button>
       </form>
-      <ul>
-        <li>
+      <ul class="user-nav">
+        <li class="user-nav-login">
           <a href="profile.html">Валентин Петухов</a>
         </li>
-        <li>
+        <li class="user-nav-compare">
           <a href="">Сравнить</a>
         </li>
-        <li>
+        <li class="user-nav-cart">
           <a href="">Корзина</a>
         </li>
       </ul>
-      <nav>
-        <ul>
+      <nav class="main-nav">
+        <ul class="main-nav-list">
           <li aria-haspopup="true">
-            <a>Каталог товаров</a>
-            <ul>
+            <a class="catalog-link">Каталог товаров</a>
+            <ul class="main-nav-sublist">
               <li>
                 <a href="">Виртуальная реальность</a>
               </li>
@@ -63,11 +63,11 @@
         </ul>
       </nav>
     </header>
-    <main>
+    <main class="container">
       <!--heading page section--> 
       <section>
-          <h1>Моноподы для селфи</h1>
-          <ul class="breadcrumb">
+          <h1 class="page-title">Моноподы для селфи</h1>
+          <ul class="breadcrumbs">
             <li> 
               <a href="index.html">Главная</a>
             </li>
@@ -81,58 +81,58 @@
       </section>
       <!--/heading page section-->
       <!--items filter-->
-      <div>
-        <form action="https://echo.htmlacademy.ru" method="GET">
-          <fieldset>
+      <div class="filter">
+        <form class="filter-settings" action="https://echo.htmlacademy.ru" method="GET">
+          <fieldset class="filter-item">
             <legend>
               Стоимость
             </legend>
             <div></div>
           </fieldset>
-          <fieldset>
+          <fieldset class="filter-item">
             <legend>Цвет</legend>
-            <ul>
-              <li>
+            <ul class="filter-options-list">
+              <li class="filter-option">
                 <input type="checkbox" name="filter-color" id="filter-color-black" value="black">
                 <label for="filter-color-black">Черный</label>
               </li>
-              <li>
+              <li class="filter-option">
                 <input type="checkbox" name="filter-color" id="filter-color-white" value="white">
                 <label for="filter-color-white">Белый</label>
               </li>
-              <li>
+              <li class="filter-option">
                 <input type="checkbox" name="filter-color" id="filter-color-blue" value="blue">
                 <label for="filter-color-blue">Синий</label>
               </li>
-              <li>
+              <li class="filter-option">
                 <input type="checkbox" name="filter-color" id="filter-color-red" value="red">
                 <label for="filter-color-red">Красный</label>
               </li>
-              <li>
+              <li class="filter-option">
                 <input type="checkbox" name="filter-color" id="filter-color-pink" value="pink">
                 <label for="filter-color-pink">Розовый</label>
               </li>
             </ul>
           </fieldset>
-          <fieldset>
+          <fieldset class="filter-item">
             <legend>Bluetooth</legend>
-            <ul>
-              <li>
+            <ul class="filter-options-list">
+              <li class="filter-option">
                 <input type="radio" name="bluetooth" id="filter-bluetooth-yes" value="yes">
                 <label for="filter-bluetooth-yes">Есть</label>
               </li>
-              <li>
+              <li class="filter-option">
                 <input type="radio" name="bluetooth" id="filter-bluetooth-no" value="no">
                 <label for="filter-bluetooth-no">Нет</label>
               </li>
             </ul>
           </fieldset>
-          <button type="submit">Показать</button>
+          <button class="button" type="submit">Показать</button>
         </form>
       </div>
       <!--/items filter-->
       <!--items list-->
-      <section>
+      <section class="catalog">
         <h2 class="visually-hidden">Список товаров:</h2>
         <header>
           <span>Сортировка:</span>
@@ -154,52 +154,52 @@
             </li>
           </ul>
         </header>     
-        <ul>
-          <li>
+        <ul class="catalog-list">
+          <li class="catalog-list-item">
             <img src="img/item-1.jpg" width="360" height="380" alt="Любительская селфи-палка">
-            <h3>
+            <h3 class="catalog-item-title">
               <a href="">Любительская селфи-палка</a>
             </h3>
-            <span>500 руб.</span>
-            <div>
-              <a href="">В корзину</a>
-              <a href="">Добавить к сравнению</a>
+            <span class="catalog-item-price">500 руб.</span>
+            <div class="catalog-item-actions">
+              <a class="action-cart button" href="">В корзину</a>
+              <a class="action-compare" href="">Добавить к сравнению</a>
             </div>
           </li>
 
-          <li>
+          <li class="catalog-list-item">
             <img src="img/item-2.jpg" width="360" height="380" alt="Профессиональная селфи-палка">
-            <h3>
+            <h3 class="catalog-item-title">
               <a href="">Профессиональная селфи-палка</a>
             </h3>
-            <span>1 500 руб.</span>
-            <div>
-              <a href="">В корзину</a>
-              <a href="">Добавить к сравнению</a>
+            <span class="catalog-item-price">1 500 руб.</span>
+            <div class="catalog-item-actions">
+              <a class="action-cart button" href="">В корзину</a>
+              <a class="action-compare" href="">Добавить к сравнению</a>
             </div>
           </li>
 
-          <li>
+          <li class="catalog-list-item">
             <img src="img/item-3.jpg" width="360" height="380" alt="Непотопляемая селфи-палка">
-            <h3>
+            <h3 class="catalog-item-title">
               <a href="">Непотопляемая селфи-палка</a>
             </h3>
-            <span>2 500 руб.</span>
-            <div>
-              <a href="">В корзину</a>
-              <a href="">Добавить к сравнению</a>
+            <span class="catalog-item-price">2 500 руб.</span>
+            <div class="catalog-item-actions">
+              <a class="action-cart button" href="">В корзину</a>
+              <a class="action-compare" href="">Добавить к сравнению</a>
             </div>
           </li>
 
-          <li>
+          <li class="catalog-list-item">
             <img src="img/item-4.jpg" width="360" height="380" alt="Селфи-палка «Следуй за мной»">
-            <h3>
+            <h3 class="catalog-item-title">
               <a href="">Селфи-палка «Следуй за мной»</a>
             </h3>
-            <span>4 900 руб.</span>
-            <div>
-              <a href="">В корзину</a>
-              <a href="">Добавить к сравнению</a>
+            <span class="catalog-item-price">4 900 руб.</span>
+            <div class="catalog-item-actions">
+              <a class="action-cart button" href="">В корзину</a>
+              <a class="action-compare" href="">Добавить к сравнению</a>
             </div>
           </li>
         </ul>
@@ -225,25 +225,26 @@
       </ul>
       <!--/pagination-->
     </main>
-    <footer>
-      <a href="index.html">
-        <svg xmlns="http://www.w3.org/2000/svg" width="163" height="35" role="img" aria-label="Переход на главную страницу" viewBox="0 0 163 35" fill="#ffc600">
-          <path d="m0.35 0.7v33.6h13.532a15.723 15.723 0 0 0 11.72-4.824 16.464 16.464 0 0 0 4.712-11.976 16.465 16.465 0 0 0-4.712-11.976 15.723 15.723 0 0 0-11.72-4.824zm7.733 26.208v-18.819h5.8a8.648 8.648 0 0 1 6.5 2.568 9.412 9.412 0 0 1 2.489 6.84 9.41 9.41 0 0 1-2.489 6.84 8.646 8.646 0 0 1-6.5 2.568h-5.8zm34.8-5.952h12.082v-7.3h-12.086v-5.567h13.291v-7.389h-21.024v33.6h21.265v-7.392h-13.532v-5.952zm36.343 13.344 11.019-33.6h-8.458l-7.491 24.72-7.491-24.72h-8.457l11.019 33.6zm14.4 0h7.733v-33.6h-7.733zm38.615-1.416a15.514 15.514 0 0 0 6.041-5.688l-6.67-3.84a7.488 7.488 0 0 1-3.165 3.024 9.874 9.874 0 0 1-4.664 1.1 9.594 9.594 0 0 1-7.177-2.736 9.907 9.907 0 0 1-2.682-7.248 9.908 9.908 0 0 1 2.682-7.248 9.594 9.594 0 0 1 7.177-2.736 9.914 9.914 0 0 1 4.64 1.08 7.6 7.6 0 0 1 3.189 3.048l6.67-3.84a15.881 15.881 0 0 0-6.09-5.688 17.419 17.419 0 0 0-8.409-2.088 17.12 17.12 0 0 0-17.592 17.472 17.12 17.12 0 0 0 17.589 17.476 17.519 17.519 0 0 0 8.458-2.088zm17.881-11.928h12.082v-7.3h-12.085v-5.567h13.29v-7.389h-21.022v33.6h21.264v-7.392h-13.532v-5.952z"/>
+    <footer class="footer">
+      <a class="logo" href="index.html">
+        <svg xmlns="http://www.w3.org/2000/svg" width="163" height="35" viewBox="0 0 163 35" fill="#ffc600">
+          <path
+            d="m0.35 0.7v33.6h13.532a15.723 15.723 0 0 0 11.72-4.824 16.464 16.464 0 0 0 4.712-11.976 16.465 16.465 0 0 0-4.712-11.976 15.723 15.723 0 0 0-11.72-4.824zm7.733 26.208v-18.819h5.8a8.648 8.648 0 0 1 6.5 2.568 9.412 9.412 0 0 1 2.489 6.84 9.41 9.41 0 0 1-2.489 6.84 8.646 8.646 0 0 1-6.5 2.568h-5.8zm34.8-5.952h12.082v-7.3h-12.086v-5.567h13.291v-7.389h-21.024v33.6h21.265v-7.392h-13.532v-5.952zm36.343 13.344 11.019-33.6h-8.458l-7.491 24.72-7.491-24.72h-8.457l11.019 33.6zm14.4 0h7.733v-33.6h-7.733zm38.615-1.416a15.514 15.514 0 0 0 6.041-5.688l-6.67-3.84a7.488 7.488 0 0 1-3.165 3.024 9.874 9.874 0 0 1-4.664 1.1 9.594 9.594 0 0 1-7.177-2.736 9.907 9.907 0 0 1-2.682-7.248 9.908 9.908 0 0 1 2.682-7.248 9.594 9.594 0 0 1 7.177-2.736 9.914 9.914 0 0 1 4.64 1.08 7.6 7.6 0 0 1 3.189 3.048l6.67-3.84a15.881 15.881 0 0 0-6.09-5.688 17.419 17.419 0 0 0-8.409-2.088 17.12 17.12 0 0 0-17.592 17.472 17.12 17.12 0 0 0 17.589 17.476 17.519 17.519 0 0 0 8.458-2.088zm17.881-11.928h12.082v-7.3h-12.085v-5.567h13.29v-7.389h-21.022v33.6h21.264v-7.392h-13.532v-5.952z" />
         </svg>
       </a>
-      <ul>
+      <ul class="user-nav inverted">
         <li>
           <a href="profile.html">Валентин Петухов</a>
         </li>
         <li>
-          <a href="">Сравнить</a>
+          <a class="user-nav-compare" href="">Сравнить</a>
         </li>
         <li>
-          <a href="">Корзина</a>
+          <a class="user-nav-cart" href="">Корзина</a>
         </li>
       </ul>
-      <p>г. Москва, ул. Строителей, 15</p>
-      <ul>
+      <p class="address">г. Москва, ул. Строителей, 15</p>
+      <ul class="main-nav-list inverted">
         <li>
           <a href="">Доставка</a>
         </li>
@@ -254,19 +255,19 @@
           <a href="">Контакты</a>
         </li>
       </ul>
-      <a href="tel:+74954959595">Тел.:+7 (495) 495-95-95</a>
-      <ul>
-        <li>
+      <a class="phone" href="tel:+74954959595">Тел.:+7 (495) 495-95-95</a>
+      <ul class="social-list">
+        <li class="facebook">
           <a href="">Facebook</a>
         </li>
-        <li>
+        <li class="instagram">
           <a href="">Instagram</a>
         </li>
-        <li>
+        <li class="twitter">
           <a href="">Twitter</a>
         </li>
       </ul>
-      <p>
+      <p class="copyright">
         <a href="https://htmlacademy.ru/intensive/htmlcss">HTML Academy</a>
       </p>
     </footer>
