--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <a class="logo">
         <img src="img/logo-device.svg" width="163" height="35" alt="Интернет-магазин 'Device'">
       </a>
-      <form class="search" action="https://echo.htmlacademy.ru" method="GET" tabindex="0">
+      <form class="search" action="https://echo.htmlacademy.ru" method="GET">
         <input type="search" name="search" placeholder="Поиск по сайту">
         <button type="submit">Найти</button>
       </form>
