--- a/catalog.html
+++ b/catalog.html
@@ -84,13 +84,13 @@
       <div class="filter">
         <form class="filter-settings" action="https://echo.htmlacademy.ru" method="GET">
           <fieldset class="filter-item">
-            <legend>
+            <legend class="filter-legend">
               Стоимость
             </legend>
             <div></div>
           </fieldset>
           <fieldset class="filter-item">
-            <legend>Цвет</legend>
+            <legend class="filter-legend">Цвет</legend>
             <ul class="filter-options-list">
               <li class="filter-option">
                 <input type="checkbox" name="filter-color" id="filter-color-black" value="black">
@@ -115,7 +115,7 @@
             </ul>
           </fieldset>
           <fieldset class="filter-item">
-            <legend>Bluetooth</legend>
+            <legend class="filter-legend">Bluetooth</legend>
             <ul class="filter-options-list">
               <li class="filter-option">
                 <input type="radio" name="bluetooth" id="filter-bluetooth-yes" value="yes">
