--- a/index.html
+++ b/index.html
@@ -72,22 +72,22 @@
           <p class="slide-img">
             <img src="img/slider-1.png" alt="Профессиональная селфи-палка">
           </p>
-          <div class="slide-description">
+          <div class="slide-content">
             <h3 class="slide-title">Делай селфи, как Бен Стиллер!</h3>
-            <p>Самая длинная палка для селфи доступна в нашем магазине.<br>
+            <p class="slide-description">Самая длинная палка для селфи доступна в нашем магазине.<br>
               Восемь (Восемь, Карл!) метров длиной и весом всего 5 килограмм.
             </p>
             <a class="button" href="">Подробнее</a>
             <table class="slide-table">
               <tr>
-                <td>Длинна палки</td>
-                <td>Вес палки</td>
-                <td>Материал</td>
+                <th class="table-th">Длинна палки</th>
+                <th class="table-th">Вес палки</th>
+                <th class="table-th">Материал</th>
               </tr>
               <tr>
-                <td>8,5 м</td>
-                <td>5 кг</td>
-                <td>Карбон</td>
+                <td class="table-td">8,5 м</td>
+                <td class="table-td">5 кг</td>
+                <td class="table-td">Карбон</td>
               </tr>
             </table>
           </div>
@@ -98,18 +98,18 @@
           <p class="slide-img">
             <img src="img/slider-2.png" alt="Фитнес-браслет">
           </p>
-          <div class="slide-description">
+          <div class="slide-content">
             <h3 class="slide-title">Худеем правильно!</h3>
-            <p>
+            <p class="slide-description">
               Мотивирующие фитнес-браслеты помогут найти в себе силы не пропускать занятия и соблюдать диету.
             </p>
             <a class="button" href="">Подробнее</a>
             <table class="slide-table">
               <tr>
-                <td>Без подзарядки</td>
+                <th class="table-th">Без подзарядки</th>
               </tr>
               <tr>
-                <td>48 часов</td>
+                <td class="table-td">48 часов</td>
               </tr>
             </table>
           </div>
@@ -120,20 +120,20 @@
           <p class="slide-img">
             <img src="img/slider-3.png" alt="Квадрокоптер">
           </p>
-          <div class="slide-description">
+          <div class="slide-content">
             <h2 class="slide-title">Порхает как бабочка, жалит как пчела!</h2>
-            <p>
+            <p class="slide-description">
               Этот обычный, на первый взгляд, квадрокоптер оснащен мощным лазером, замаскированным под стандартную камеру.
             </p>
             <a class="button" href="">Подробнее</a>
             <table class="slide-table">
               <tr>
-                <td>Высота полета</td>
-                <td>Радиус поражения</td>
+                <th class="table-th">Высота полета</th>
+                <th class="table-th">Радиус поражения</th>
               </tr>
               <tr>
-                <td>800 м</td>
-                <td>50 м</td>
+                <td class="table-td">800 м</td>
+                <td class="table-td">50 м</td>
               </tr>
             </table>
           </div>
@@ -143,37 +143,37 @@
       <!--/main slider-->
       <h2 class="visually-hidden">Категории товаров</h2>
       <ul class="popular-list">
-        <li>
+        <li class="popular-item">
           <img src="img/popular-1.svg" alt="Виртуальная реальность">
           <h3>
             <a href="catalog.html">Виртуальная реальность</a>
           </h3>
         </li>
-        <li>
+        <li class="popular-item">
           <img src="img/popular-2.svg" alt="Моноподы для селфи">
           <h3>
             <a href="catalog.html">Моноподы для селфи</a>
           </h3>
         </li>
-        <li>
+        <li class="popular-item">
           <img src="img/popular-3.svg" alt="Экшн камеры">
           <h3>
             <a href="catalog.html">Экшн камеры</a>
           </h3>
         </li>
-        <li>
+        <li class="popular-item">
           <img src="img/popular-4.svg" alt="Фитнес-браслеты">
           <h3>
             <a href="catalog.html">Фитнес-браслеты</a>
           </h3>
         </li>
-        <li>
+        <li class="popular-item">
           <img src="img/popular-5.svg" alt="Умные часы">
           <h3>
             <a href="catalog.html">Умные часы</a>
           </h3>
         </li>
-        <li>
+        <li class="popular-item">
           <img src="img/popular-6.svg" alt="Квадрокоптеры">
           <h3>
             <a href="catalog.html">Квадрокоптеры</a>
@@ -217,24 +217,24 @@
         </div>
       </section>
       <section class="partners">
-        <h3 class="visualy-hidden">Партнеры, с которыми мы работаем</h3>
+        <h3 class="visually-hidden">Партнеры, с которыми мы работаем</h3>
         <ul class="partners-list">
-          <li>
+          <li class="partners-item">
             <a href="https://www.dji.com">
               <img src="img/logo-1.jpg" alt="DJI">
             </a>
           </li>
-          <li>
+          <li class="partners-item">
             <a href="http://www.sp-gadgets.com">
               <img src="img/logo-2.jpg" alt="SP GADGETS">
             </a>
           </li>
-          <li>
+          <li class="partners-item">
             <a href="https://gopro.ru/">
               <img src="img/logo-3.jpg" alt="GoPro">
             </a>
           </li>
-          <li>
+          <li class="partners-item">
             <a href="https://www.vive.com">
               <img src="img/logo-4.jpg" alt="VIVE">
             </a>
@@ -271,7 +271,7 @@
           <path d="m0.35 0.7v33.6h13.532a15.723 15.723 0 0 0 11.72-4.824 16.464 16.464 0 0 0 4.712-11.976 16.465 16.465 0 0 0-4.712-11.976 15.723 15.723 0 0 0-11.72-4.824zm7.733 26.208v-18.819h5.8a8.648 8.648 0 0 1 6.5 2.568 9.412 9.412 0 0 1 2.489 6.84 9.41 9.41 0 0 1-2.489 6.84 8.646 8.646 0 0 1-6.5 2.568h-5.8zm34.8-5.952h12.082v-7.3h-12.086v-5.567h13.291v-7.389h-21.024v33.6h21.265v-7.392h-13.532v-5.952zm36.343 13.344 11.019-33.6h-8.458l-7.491 24.72-7.491-24.72h-8.457l11.019 33.6zm14.4 0h7.733v-33.6h-7.733zm38.615-1.416a15.514 15.514 0 0 0 6.041-5.688l-6.67-3.84a7.488 7.488 0 0 1-3.165 3.024 9.874 9.874 0 0 1-4.664 1.1 9.594 9.594 0 0 1-7.177-2.736 9.907 9.907 0 0 1-2.682-7.248 9.908 9.908 0 0 1 2.682-7.248 9.594 9.594 0 0 1 7.177-2.736 9.914 9.914 0 0 1 4.64 1.08 7.6 7.6 0 0 1 3.189 3.048l6.67-3.84a15.881 15.881 0 0 0-6.09-5.688 17.419 17.419 0 0 0-8.409-2.088 17.12 17.12 0 0 0-17.592 17.472 17.12 17.12 0 0 0 17.589 17.476 17.519 17.519 0 0 0 8.458-2.088zm17.881-11.928h12.082v-7.3h-12.085v-5.567h13.29v-7.389h-21.022v33.6h21.264v-7.392h-13.532v-5.952z" />
         </svg>
       </a>
-      <ul class="user-nav inverted">
+      <ul class="user-nav user-nav-footer">
         <li>
           <a class="user-nav-login" href="">Войти</a>
         </li>
@@ -283,7 +283,7 @@
         </li>
       </ul>
       <p class="address">г. Москва, ул. Строителей, 15</p>
-      <ul class="main-nav-list inverted">
+      <ul class="main-nav-list main-nav-footer">
         <li>
           <a href="">Доставка</a>
         </li>
