corrected comments, fixed internet explorer fonts

--- a/catalog.html
+++ b/catalog.html
@@ -136,21 +136,21 @@
         <h2 class="visually-hidden">Список товаров:</h2>
         <header class="sort">
           <span class="sort-title">Сортировка:</span>
-          <ul class="sort-options-list">
-            <li class="sort-option">
-              <a href="">По цене</a>
+          <ul class="sort-list">
+            <li class="sort-item">
+              <a class="sort-action" href="">По цене</a>
             </li>
-            <li class="sort-option">
-              <a href="">По типу</a>
+            <li class="sort-item">
+              <a class="sort-action" href="">По типу</a>
             </li>
-            <li class="sort-option">
-              <a href="">По популярности</a>
+            <li class="sort-item">
+              <a class="sort-action" href="">По популярности</a>
             </li>
-            <li class="sort-option arrow-up">
-              <a href="">По возрастанию</a>
+            <li class="sort-item">
+              <a class="sort-action arrow-up" href="">По возрастанию</a>
             </li>
-            <li class="sort-option arrow-down">
-              <a href="">По убыванию</a>
+            <li class="sort-item">
+              <a class="sort-action arrow-down" href="">По убыванию</a>
             </li>
           </ul>
         </header>     
