--- a/index.html
+++ b/index.html
@@ -145,39 +145,27 @@
       <ul class="popular-list">
         <li class="popular-item">
           <img src="img/popular-1.svg" alt="Виртуальная реальность">
-          <h3>
-            <a href="catalog.html">Виртуальная реальность</a>
-          </h3>
+          <a href="catalog.html">Виртуальная реальность</a>
         </li>
         <li class="popular-item">
           <img src="img/popular-2.svg" alt="Моноподы для селфи">
-          <h3>
-            <a href="catalog.html">Моноподы для селфи</a>
-          </h3>
+          <a href="catalog.html">Моноподы для селфи</a>
         </li>
         <li class="popular-item">
           <img src="img/popular-3.svg" alt="Экшн камеры">
-          <h3>
-            <a href="catalog.html">Экшн камеры</a>
-          </h3>
+          <a href="catalog.html">Экшн камеры</a>
         </li>
         <li class="popular-item">
           <img src="img/popular-4.svg" alt="Фитнес-браслеты">
-          <h3>
-            <a href="catalog.html">Фитнес-браслеты</a>
-          </h3>
+          <a href="catalog.html">Фитнес-браслеты</a>
         </li>
         <li class="popular-item">
           <img src="img/popular-5.svg" alt="Умные часы">
-          <h3>
-            <a href="catalog.html">Умные часы</a>
-          </h3>
+          <a href="catalog.html">Умные часы</a>
         </li>
         <li class="popular-item">
           <img src="img/popular-6.svg" alt="Квадрокоптеры">
-          <h3>
-            <a href="catalog.html">Квадрокоптеры</a>
-          </h3>
+          <a href="catalog.html">Квадрокоптеры</a>
         </li>
       </ul>
       
@@ -220,23 +208,23 @@
         <h3 class="visually-hidden">Партнеры, с которыми мы работаем</h3>
         <ul class="partners-list">
           <li class="partners-item">
-            <a href="https://www.dji.com">
-              <img src="img/logo-1.jpg" alt="DJI">
+            <a class="dji" href="https://www.dji.com">
+              <img src="img/logo-1.jpg" width="260" height="100" alt="DJI">
             </a>
           </li>
           <li class="partners-item">
-            <a href="http://www.sp-gadgets.com">
-              <img src="img/logo-2.jpg" alt="SP GADGETS">
+            <a class="sp-gadgets" href="http://www.sp-gadgets.com">
+              <img src="img/logo-2.jpg" width="260" height="100" alt="SP GADGETS">
             </a>
           </li>
           <li class="partners-item">
-            <a href="https://gopro.ru/">
-              <img src="img/logo-3.jpg" alt="GoPro">
+            <a class="gopro" href="https://gopro.ru/">
+              <img src="img/logo-3.jpg" width="260" height="100" alt="GoPro">
             </a>
           </li>
           <li class="partners-item">
-            <a href="https://www.vive.com">
-              <img src="img/logo-4.jpg" alt="VIVE">
+            <a class="vive" href="https://www.vive.com">
+              <img src="img/logo-4.jpg" width="260" height="100" alt="VIVE">
             </a>
           </li>
         </ul>
